poketwo/imgen-rust/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imgen-rust
spec:
  replicas: 8
  selector:
    matchLabels:
      app: imgen-rust
  template:
    metadata:
      labels:
        app: imgen-rust
    spec:
      containers:
        - name: server
          image: ghcr.io/poketwo/imgen-rust:main
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "300Mi"
              cpu: "600m"
      imagePullSecrets:
        - name: ghcr-auth
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: imgen-rust
                topologyKey: kubernetes.io/hostname
